# wine-recognizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: test_features.npy  test_targets.npy  train_features.npy  train_targets.npy
models/: rfc100.joblib
notebooks/: ida_train.ipynb
wine-recognizer/: infer.py  train.py
