[tool.poetry]
name = "wine-recognizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
